# sharpify

./: .gitignore  package-lock.json
AI-Backend/: pyproject.toml
AI-Backend/src/middleware/: auth_middleware.py
AI-Backend/src/router/: formatchange.py  reducesize.py
AI-Backend/src/services/: _init_.py  downloadImage.py  s3_upload.py
AI-Backend/src/utils/: formatchangeprocess.py  model_loader.py  reducesizeprocess.py  test.py
my-next-app/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
my-next-app/app/: globals.css  layout.tsx  page.tsx
my-next-app/app/actions/: auth.ts
my-next-app/app/dashboard/: layout.tsx  page.tsx
my-next-app/components/: app-sidebar.tsx  imagecropper.tsx  nav-main.tsx
my-next-app/functions/: uploadToCloudinery.ts  web-socket.tsx
my-next-app/prisma/: schema.prisma
next-app/: middleware.ts  package-lock.json  package.json
next-app/app/: page.tsx
next-app/app/store/: UIatom.ts  (+3 more)
next-app/prisma/: schema.prisma
poetry-demo/: .gitignore  pyproject.toml
poetry-demo/src/: main.py
poetry-demo/src/config/: config.py
poetry-demo/src/router/: backgroundremove.py  colorize.py  enhance.py  enhanceimage.py  formatchange.py  reducesize.py  removebackground.py  sizereducer.py
poetry-demo/src/services/: cloudinery_retrive.py  cloudinery_upload.py  downloadImage.py
poetry-demo/src/utils/: AI_backgroundremover.py  AI_colorize.py  AI_enhance.py  AI_formatchange.py  AI_sizereducer.py  enhanceprocess.py  formatchangeprocess.py  model_loader.py  reducesizeprocess.py
(+92 files in other folders)
